@startuml

hide methods
left to right direction

class Platform {
  -String designation
}

class Organization {
  -String designation
}

class User {
  -String name
  -String email
  -String password
}

class Collaborator {
  -String name
  -String email
}

class Manager {
  -String name
  -String email
}

class Administrator {

}

class ExternalPasswordGeneratorAlgorithm {
}

Platform "1" -- "*" Organization : has registered >
Platform "1" -- "*" Administrator : has registered >
Platform "1" -- "*" User : has registered >
Platform "1" -- "1" ExternalPasswordGeneratorAlgorithm : resort to >

Organization "1" -- "1" Collaborator: has >
Organization "1" -- "1" Manager: has >

Collaborator "0..1" -- "1" User : act as >

Manager "0..1" -- "1" User : act as >

Administrator "0..1" -- "1" User : act as >
Administrator "1" -- "*" Organization : registers >

ExternalPasswordGeneratorAlgorithm "1" -- "*" User : generates password to >
@enduml
